--- a/cart.html
+++ b/cart.html
@@ -37,10 +37,12 @@
   </nav>
   <main>
     <div class="container">
+      <form action="">
       <div id="tablaCarrito">
         <h3 class="mt-4">Carrito de compra</h3>
       </div>
       <div id="formularioEnvio">
+        
         <h3 class="mt-4">Tipo de envio</h3>
         <div class="form-check">
           <input value="0.15" class="form-check-input" type="radio" name="envio" id="premium" checked>
@@ -65,15 +67,15 @@
         <div class="row g-2">
           <div class="col-sm-9">
             <label class="form-check-label" for="calle">Calle</label>
-            <input type="text" name="calle" id="calle" class="form-control" placeholder="Av. Pirulin">
+            <input type="text" name="calle" id="calle" class="form-control" placeholder="Av. Pirulin" required>
           </div>
           <div class="col-sm">
             <label class="form-check-label" for="numero">Numero</label>
-            <input type="number" name="numero" id="numero" class="form-control" placeholder="1256">
+            <input type="number" name="numero" id="numero" class="form-control" placeholder="1256" required>
           </div>
           <div class="col-sm-9">
             <label class="form-check-label" for="esquina">Esquina</label>
-            <input type="text" name="esquina" id="esquina" class="form-control" placeholder="Pepito">
+            <input type="text" name="esquina" id="esquina" class="form-control" placeholder="Pepito" required>
           </div>
         </div>
       </div>
@@ -119,7 +121,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form class="row g-3" data-dashlane-rid="9111bfe67d56abdc" data-form-type="login">
+        <div class="row g-3">
           <div class="form-check">
             <input value="credito" class="form-check-input" type="radio" name="seleccionPago" id="credito">
             <label class="form-check-label" for="credito">
@@ -128,16 +130,16 @@
           </div>
           <hr>
           <div class="col-md-6">
-            <label for="inputEmail4" class="form-label">Numero de tarjeta</label>
-            <input type="text" class="form-control" id="inputEmail4" data-form-type="email">
+            <label for="numeroTarjeta" class="form-label">Numero de tarjeta</label>
+            <input type="number" class="form-control" id="numeroTarjeta">
           </div>
           <div class="col-md-6">
-            <label for="inputPassword4" class="form-label">Codigo de seguridad (CVV)</label>
-            <input type="text" class="form-control" id="inputPassword4" data-form-type="password">
+            <label for="codigoSeguridad" class="form-label">Codigo de seguridad (CVV)</label>
+            <input type="number" class="form-control" id="codigoSeguridad">
           </div>
           <div class="col-6">
-            <label for="inputAddress" class="form-label">Vencimiento MM/AA</label>
-            <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St" data-form-type="address">
+            <label for="vencimientoTarjeta" class="form-label">Vencimiento MM/AA</label>
+            <input type="text" class="form-control" id="vencimientoTarjeta" placeholder="25/03" data-form-type="address">
           </div>
           <div class="form-check">
             <input value="banco" class="form-check-input" type="radio" name="seleccionPago" id="banco">
@@ -147,10 +149,10 @@
           </div>
           <hr>
           <div class="col-md-12">
-            <label for="inputZip" class="form-label">Numero de cuenta</label>
-            <input type="text" class="form-control" id="inputZip" data-form-type="address,zip">
+            <label for="numeroCuentaBanco" class="form-label">Numero de cuenta</label>
+            <input type="number" class="form-control" id="numeroCuentaBanco">
           </div>
-        </form>
+        </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="btnCerrarModal">Cerrar ventana</button>
@@ -160,6 +162,9 @@
 </div>
 
         <p id="formaSeleccionada">Forma de pago <a href="#" data-bs-toggle="modal" data-bs-target="#formaPagoModal">seleccionar</a></p>
+        <div class="row m-1">      
+        <button type="submit" id="btnEnviarForm" class="btn btn-primary btn-lg">Finalizar compra</button></div>
+      </form>
       </div>
     </div>
   </main>
